fix(insights): force rendering of collapse/expand arrows in json view

--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,5 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(139, 92, 246, 0.35);
 }.json-view-container { word-break: break-all; white-space: pre-wrap; }
+._1LId0::after { content: "\25BE"; padding-right: 5px; }
+._1UmXx::after { content: "\25B8"; padding-right: 5px; }
